syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Events;

import "Protos/IT/WebServices/Fragments/Errors.proto";

message EventError {
    EventErrorReason Type = 1;
    string Message = 2;
    repeated IT.WebServices.Fragments.ValidationIssue Validation = 3;
}

enum EventErrorReason {
    EVENT_REASON_UNSPECIFIED = 0;
    
    // Event Creation 100-149
    CREATE_EVENT_ERROR_INVALID_REQUEST = 100;
    CREATE_EVENT_ERROR_UNAUTHORIZED = 101;
    CREATE_EVENT_ERROR_NULL_BODY = 102;
    CREATE_EVENT_ERROR_ALREADY_EXISTS = 103;
    CREATE_EVENT_ERROR_UNKNOWN = 149;
    
    // Recurring Event Creation 200-249
    CREATE_RECURRING_EVENT_ERROR_INVALID_REQUEST = 200;
    CREATE_RECURRING_EVENT_ERROR_UNAUTHORIZED = 201;
    CREATE_RECURRING_EVENT_ERROR_NULL_BODY = 202;
    CREATE_RECURRING_EVENT_ERROR_INVALID_RECURRENCE = 203;
    CREATE_RECURRING_EVENT_ERROR_INVALID_HASH = 204;
    CREATE_RECURRING_EVENT_ERROR_UNKNOWN = 249;
    
    // Event Retrieval 300-349
    GET_EVENT_ERROR_NOT_FOUND = 300;
    GET_EVENT_ERROR_UNAUTHORIZED = 301;
    GET_EVENT_ERROR_INVALID_HASH = 302;
    GET_EVENT_ERROR_UNKNOWN = 349;
    
    // Event Cancellation 400-449
    CANCEL_EVENT_ERROR_NOT_FOUND = 400;
    CANCEL_EVENT_ERROR_UNAUTHORIZED = 401;
    CANCEL_EVENT_ERROR_UNKNOWN = 449;
    
    // Ticket Reservation 500-549
    RESERVE_TICKET_ERROR_INVALID_REQUEST = 500;
    RESERVE_TICKET_ERROR_UNAUTHORIZED = 501;
    RESERVE_TICKET_ERROR_EVENT_NOT_FOUND = 502;
    RESERVE_TICKET_ERROR_MAX_LIMIT_REACHED = 503;
    RESERVE_TICKET_ERROR_NOT_ON_SALE = 504;
    RESERVE_TICKET_ERROR_UNKNOWN = 549;
    
    // Ticket Cancellation 600-649
    CANCEL_TICKET_ERROR_UNAUTHORIZED = 600;
    CANCEL_TICKET_ERROR_EVENT_NOT_FOUND = 601;
    CANCEL_TICKET_ERROR_TICKET_NOT_FOUND = 602;
    CANCEL_TICKET_ERROR_UNKNOWN = 649;
    
    // Ticket Usage 700-749
    USE_TICKET_ERROR_UNAUTHORIZED = 700;
    USE_TICKET_ERROR_EVENT_NOT_FOUND = 701;
    USE_TICKET_ERROR_TICKET_NOT_FOUND = 702;
    USE_TICKET_ERROR_ALREADY_USED = 703;
    USE_TICKET_ERROR_EXPIRED = 704;
    USE_TICKET_ERROR_CANCELED = 705;
    USE_TICKET_ERROR_UNKNOWN = 749;
    
    // Generic 900-999
    EVENT_ERROR_SERVICE_OFFLINE = 900;
    EVENT_ERROR_VALIDATION_FAILED = 901;
    EVENT_ERROR_UNAUTHORIZED = 902;
    EVENT_ERROR_UNKNOWN = 999;
}